needed_on_adminws/k8s/istio-operator/create-ns-istio-system.yaml
# creates istio-system namespace if necessary
# alterative to:
#   kubectl create ns istio-system
---
kind: Namespace
apiVersion: v1
metadata:
  name: istio-system
