needed_on_adminws/k8s/istio-operator/istio-operator-1.7.5.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: istio-system
