needed_on_adminws/k8s/istio-operator/istio-operator.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: istio-system
