needed_on_adminws/k8s/istio-operator/my-istio-ingress-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use selector of ingress gateway, not deployment name 'istio-ingressgateway'
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    # NOTE: if using GCP GFE, SNI names are not passed through. 
    # You would need to use '*' in Gateway, and specify hostnames at VirtualService instead
    # https://cloud.google.com/security/encryption-in-transit#secure_backend_protocol_considerations
    hosts:
      - '*'
  - port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-credential
    # NOTE: if using GCP GFE, SNI names are not passed through. 
    # You would need to use '*' in Gateway, and specify hostnames at VirtualService instead
    hosts:
      - '*'
