needed_on_adminws/k8s/istio-operator/my-istio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /istio
    route:
    - destination:
        host: my-istio-service
        port:
          number: 80 # port exposed by my-istio-service
